# vector-search-demo

./: .env  .gitignore  Makefile  Readme.md  docker-compose.yaml  pyproject.toml  webpack.config.js
api/: Dockerfile  __init__.py  app.py  bootstrap.py  entrypoint.sh  es_client.py  product.py  pyproject.toml  search_service.py  vector_provider.py
api/src/: __init__.py  app.py  bootstrap.py  es_client.py  rrf.py  search.py  vector_generator.py
data/: 1-prepare-data.py  2-import.py  3-extract-images.py  Dockerfile  entrypoint.sh  extract-images.py  import.py  prepare-data.py  pyproject.toml  thirts.csv
ui/: Dockerfile  entrypoint.sh  package.json  typescript.config  webpack.config.js
ui/src/: Search.tsx  SearchFilterMode.ts  SearchFilters.ts  SearchForm.tsx  SearchItem.ts  SearchList.tsx  SearchListItem.tsx  index.tsx
