[project]
name = "search"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Kłak",email = "klak.maciej@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch (>=8.17.1,<9.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "ruff (>=0.9.4,<0.10.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers[torch] (>=4.48.2,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
