[project]
name = "search-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Kłak",email = "klak.maciej@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "elasticsearch (>=8.17.1,<9.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "torch (>=2.6.0,<3.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "kink (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
torch = {source = "pytorch-cpu-src"}
