[project]
name = "search-demo-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Maciej Kłak",email = "klak.maciej@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "elasticsearch (>=8.17.1,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "datasets (>=3.3.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
